# Lumina

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
Essence/: CMakeLists.txt
Essence/include/Lumina/Essence/: Application.hpp  DeletionQueue.hpp  DescriptorAllocator.hpp  DescriptorLayoutBuilder.hpp  GLFWReference.hpp  PipelineBuilder.hpp  Platform.hpp  Vulkan.hpp  VulkanImage.hpp  Window.hpp  WindowApplication.hpp
Essence/include/Lumina/Essence/Utils/: FileIO.hpp  NonCopyable.hpp  Packed.hpp  Platform.hpp  unimplemented.hpp
Essence/src/: Application.cpp  DeletionQueue.cpp  GLFWReference.cpp  PipelineBuilder.cpp  Vulkan.cpp  VulkanImage.cpp  Window.cpp  WindowApplication.cpp
Essence/src/Utils/: FileIO.cpp
TrialGround/: CMakeLists.txt
TrialGround/resources/shaders/: colored_triangle.vert  gradient.comp
TrialGround/src/: main.cpp
libraries/: CMakeLists.txt
libraries/imgui/: CMakeLists.txt
